fix: issue with contrast color for switch

--- a/packages/components/src/components/switch/switch.scss
+++ b/packages/components/src/components/switch/switch.scss
@@ -186,11 +186,13 @@ $checked-active-transition-size: calc(
 
 				&::before {
 					background-color: colors.$db-current-color-on-contrast-enabled;
+					color: colors.$db-current-color-on-contrast-enabled;
 				}
 			}
 
 			&::before {
 				background-color: colors.$db-current-color-on-contrast-enabled;
+				color: colors.$db-current-color-on-contrast-enabled;
 				block-size: $switch-active-thumb-size;
 				margin: 0;
 			}
